Updated for home

--- a/.dockerignore
+++ b/.dockerignore
@@ -5,3 +5,7 @@ docker-compose-bridge.yml.template
 docker-compose-macvlan.yml.template
 docker-compose-host.yml.template
 docker-compose.yml
+data
+config
+transcode
+Makefile
